# Potato-8

./: CMakeLists.txt  README.md
src/: c8.cpp  cpu.cpp  cpu.h  emu.h.in  gfx.cpp  gfx.h  mem.cpp  mem.h
